--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "garoupa"
+name = "hoshy"
 version = "1.210328.0"
 description = "Cryptographic hash, abstract algebra and operators (previously known as 'hoshy') - see package hosh for a faster, native (compiled) hash/ops approach "
 authors = ["davips <dpsabc@gmail.com>"]
